# dioxus-riverpod

./: .gitignore  CHANGELOG.md  Cargo.toml  GLOBAL_PROVIDER_MIGRATION.md  IMPROVEMENTS.md  LICENSE  README.md  TODO.md  release-plz.toml
.cursor/rules/: rust.mdc
.github/: FUNDING.yml
.github/workflows/: release-plz.yml
dioxus-provider-macros/: CHANGELOG.md  Cargo.toml
dioxus-provider-macros/src/: lib.rs
dioxus-riverpod-macros/: Cargo.toml
dioxus-riverpod-macros/src/: lib.rs
examples/: auto_dispose_demo.rs  cache_expiration_demo.rs  cache_expiration_test.rs  composable_provider_demo.rs  comprehensive_cache_test.rs  comprehensive_demo.rs  counter_mutation_demo.rs  dependency_injection_demo.rs  feature_test.rs  interval_refresh_demo.rs  minimal_web_test.rs  provider_state_combinators.rs  riverpod_style.rs  simple_swr_demo.rs  simple_swr_demo_fixed.rs  simple_todo.rs  structured_errors_demo.rs  suspense_demo.rs  swr_demo.rs  todo_app.rs  todo_macro_demo.rs  web_features_test.rs
examples/assets/: auto_dispose_styles.css  cache_expiration_styles.css  composable_provider_styles.css  comprehensive_cache_styles.css  dependency_injection_styles.css  structured_errors_styles.css  style.css  swr_demo_styles.css
fullstack-example/: CHANGELOG.md  Cargo.toml  Dioxus.toml
fullstack-example/src/: main.rs
src/: cache.rs  disposal.rs  errors.rs  global.rs  hooks.rs  injection.rs  lib.rs  mutation.rs  param_utils.rs  platform.rs  provider_state.rs  providers.rs  refresh.rs  types.rs
tests/: dependency_injection_test.rs
