[package]
name = "dioxus-provider"
description = "Data fetching and caching library for Dioxus applications with intelligent caching strategies and global providers."
version = "0.0.6"
edition = "2024"
license = "MIT"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
readme = "./README.md"
homepage = "https://wheregmis.github.io"
repository = "https://github.com/wheregmis/dioxus-provider.git"
keywords = ["dioxus", "data-fetching", "caching", "providers", "swr"]
categories = ["gui", "asynchronous", "web-programming"]

[workspace]
members = [".", "dioxus-provider-macros", "fullstack-example"]

[features]
default = []

[dependencies]
dioxus = { version = "0.7.0-alpha.3", default-features = false, features = [
    "macro",
    "hooks",
    "signals",
] }
# dioxus-provider-macros = { version = "0.1.1" }
dioxus-provider-macros = { version = "0.1.2", path = "./dioxus-provider-macros" }
futures = "0.3"
tracing = "0.1.41"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Desktop/server tokio with more features
tokio = { version = "1.47.1", features = [
    "sync",
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-compatible tokio features only
tokio = { version = "1.45.1", features = ["sync", "time", "rt", "macros"] }
wasmtimer = "0.4.1"
web-time = "1.1.0"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["time"] }
chrono = { version = "0.4", features = ["std"] }
env_logger = "0.11"
tracing-subscriber = "0.3"
serde_json = { version = "1.0.142", features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Desktop-only dependencies for examples
dioxus = { version = "0.7.0-alpha.3", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Web-only dependencies for examples  
dioxus = { version = "0.7.0-alpha.3", features = ["web"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
