[package]
name = "dioxus-provider-macros"
version = "0.1.3"
edition = "2024"
description = "Procedural macros for dioxus-provider - declarative data fetching and caching for Dioxus applications"
license = "MIT"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
repository = "https://github.com/wheregmis/dioxus-provider.git"
keywords = ["dioxus", "macros", "proc-macro", "data-fetching", "caching"]
categories = ["gui", "asynchronous", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
humantime = "2.2.0"
